@@ -1,3 +1,11 @@
+Sun Aug 26 19:40:12 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (make_roff_command): If MAN_KEEP_FORMATTING is set in
+	  the environment, don't strip formatting characters with col
+	  (Debian bug #340673).
+	* man/man1/man.man1 (ENVIRONMENT): Document MAN_KEEP_FORMATTING.
+	* docs/NEWS: Document this.
+
 Sun Aug 26 16:40:50 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	Suppress warnings in --quiet mode (thanks, Martin Dorey; Debian bugs
